  - Fix admin bankhistory commands.
    - Closes #4701.
  - Fix closed_economy not working with bankruptcy or bankhistory features.
  - Fix allied players triggering death payments.
    - Closes #4705.
  - Fix disallowed-withdrawing-from-banks affecting depositing as well.
    - Closes #4707.
  - Fix withers being able to smash through walls.
    - Closes #4708.
0.96.7.0:
  - Bump version for hotfix release.
0.96.7.1:
  - Fix NPCs being able to throw an exception when they kill a player.
  - Fix up the message shown to admins when a player has tried to log in with a dis-allowed name.
  - Fix plot names having their spaces parsed out.
  - Fix debug messaging in DailyTimerTask.
  - Fix error message being sent to resident instead of player.
  - Bump language files to version 0.98.
    - Replaces ruin/deletion messages to be clearer about what is happening to the town.
  - Removal of any methods deprecated earlier than 0.96.0.0.
    - Marked many deprecated methods with the version in which they were deprecated for easier future removal.
  - Update spanish.yml, courtesy of ElMoha943 with PR #4716.
  - Update es-419.yml, courtesy of EuGNosii with PR #4717.
  - Made GUI titles translatable.
    - Closes #4719.
  - Placeholders:
    - %townyadvanced_is_nation_peaceful%
    - %townyadvanced_is_town_peaceful%
    - If the player has a town/nation which is peaceful the language string "status_town_title_peaceful" will be shown: "&b(Peaceful)".
    - Addresses https://github.com/TownyAdvanced/SiegeWar/issues/72
  - Update spanish.yml, courtesy of ElMoha943 with PR #4722.
  - Update es-419.yml, courtesy of EuGNosii with PR #4723.
  - API: add convenience methods to TownyAPI:
    - getNation(name)
    - getTown(name)
    - getResident(name)
    - getNation(uuid)
    - getTown(uuid)
    - getResident(uuid)
  - Fix goofy replacing in TownySpigotMessaging sendSpigotConfirmMessage.
  - Fix regression in GUIs which made inventories unusable.